change hmtl and css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </header>
 
   <!-- main section -->
-  <main id="mar" class="mt-20 my-0 py-0 md:flex md:items-center md:justify-around">
+  <main id="mar" class="">
     <div class="m-right md:order-2">
       <img class="block" src="img/my-pic.png" alt="Profile picture of Nasim Ahmed Golap" />
     </div>
@@ -59,11 +59,11 @@
 
   <!-- ------About section------- -->
   <section id="About">
-    <div class="md:flex  md:basis-[30%] max-lg:[20%]">
-      <div class="A-left mb-5 md:order-1 ">
-        <img class="rounded-3 block h-100" src="img/nasim.png" alt="">
+    <div class="md:flex md:flex-row md:gap-x-2">
+      <div class="A-left mb-5 md:order-1">
+        <img class="rounded-3 " src="img/nasim.png" alt="">
       </div>
-      <div class="A-right block mt-6 order-2 md:basis-[60%] lg:basis-[68%] ">
+      <div class="A-right block mt-6 md:order-2">
         <h1 style="margin-bottom: 30px;" class="text-center text-2xl font-bold md:text-5xl md:text-center">About Me</h1>
         <p class="text-justify md:text-3xl"> I am a junior frontend web developer. I edit code beautifully and
           accurately. I am building a few e-commerce websites that are mobile responsive. This has given me the
