--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               class="fa-brands fa-square-linkedin text-3xl"></i></a>
         </div>
         <div class="text-center md:text-left btn">
-          <a href="" download> <button>Download CV</button> </a>
+          <a href="#" download> <button>Download CV</button> </a>
         </div>
       </div>
 
