--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="css/output.css">
   <link rel="stylesheet" href="coustom.css">
   <title>portfolio</title>
@@ -144,7 +145,7 @@
               class="fa-brands fa-square-linkedin text-3xl"></i></a>
         </div>
         <div class="text-center md:text-left btn">
-          <a href="#" download> <button>Download CV</button> </a>
+          <a href="Curriculum Vitae.pdf" download> <button>Download CV </button></a>
         </div>
       </div>
 
