--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
             class="border rounded-md p-2 m-2" />
 
           <span id="error-phone"></span>
-          <input type="tel" id="phone" name="Phone" placeholder="Phone no" value="0"
-            class="border rounded-md p-2 m-2" />
+          <input type="tel" id="phone" name="Phone" placeholder="Phone no" class="border rounded-md p-2 m-2" />
 
           <textarea rows="5" cols="50" placeholder="Comment" name="Comment" required
             class="border rounded-md p-2 m-2"></textarea>
