--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "Nasim Ahmed Golap",
-  "alternateName": "Nasim",
-  "alternateName": "Golap",
+  "alternateName": ["Nasim","Ahmed","Golap","nasim","golap"],
   "url": "https://nasimportfolio354.netlify.app/",
-  "image": "https://mechanical-brown-d4vrszbmfr.edgeone.app/WhatsAp.jpeg",
-  "image": "https://creepy-azure-2gemrqokgv.edgeone.app/nasim.jpg",
-  "title": "junior Developer(react)",
+  "image": [
+    "https://mechanical-brown-d4vrszbmfr.edgeone.app/WhatsAp.jpeg",
+    "https://creepy-azure-2gemrqokgv.edgeone.app/nasim.jpg"
+  ],
+  "jobTitle": "junior Developer(react)",
   "sameAs": [
     "https://www.facebook.com/NasimAhmedGolap",
     "https://www.linkedin.com/in/mdnasimahamed/",
@@ -29,6 +30,7 @@
     "@type":"PostalAddress",
     "streetAddress":"Tanore, md-alipur",
     "addressLocality": "Rajshahi",
+    "addressRegion": "Rajshahi Division",
     "addressCountry":"Bangladesh"
   }
 }
